--- a/internetProgramming_TeemProject/wwwroot/css/load.css
+++ b/internetProgramming_TeemProject/wwwroot/css/load.css
@@ -2,16 +2,19 @@
 * {
     box-sizing: border-box;
   }
-  
-  body {
-    background-color: #f9fafb;
-    font-family: 'Open Sans', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
-  }
+
+body {
+  background-color: #1c4f82;
+  font-family: 'Lato', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  padding-bottom: 100px;
+}
+
   
   .container {
     background-color: #fff;
@@ -28,12 +31,7 @@
     position: absolute;
     left: 0px;
     top: 0px;
-  }
-  body p{
-    position: absolute;
-    bottom: 2px;
-    right: 2px;
-    display: block;
+    
   }
   .form {
     padding: 30px 40px;
@@ -71,19 +69,4 @@
     padding: 10px;
     margin-top: 20px;
     width: 100%;
-  }
-  .register{
-    position:absolute;
-    right: 0px;
-    top: 0px;
-    cursor: pointer;
-    background-color: #3498db;
-    border: 2px solid #3498db;
-    border-radius: 4px;
-    color: #fff;
-    display: block;
-    font-size: 16px;
-    padding: 10px;
-    margin-top: 20px;
-    width: 10%;
   }
