后台增加学院，增、删、更新教师

--- a/internetProgramming_TeemProject/wwwroot/css/load.css
+++ b/internetProgramming_TeemProject/wwwroot/css/load.css
@@ -4,7 +4,7 @@
   }
 
 body {
-  background-color: #1c4f82;
+  background-color: #f8f8f8f5;
   font-family: 'Lato', sans-serif;
   display: flex;
   flex-direction: column;
