登录界面实现，教师，学生基本构建

--- a/internetProgramming_TeemProject/wwwroot/css/student.css
+++ b/internetProgramming_TeemProject/wwwroot/css/student.css
@@ -1,180 +1,3 @@
-﻿* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-}
-body {
-    background-color: #fff;
-}
-button:focus {
-    outline: none;
-}
-button,input[type='submit'] {
-    background-color:#296ca8;
-    border: 0;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-    padding: 8px 12px;
-}
-
-.clear {
-    clear: both;
-}
-.content {
-    width: 85%;
-    margin: 100px 100px 0 100px;
-    background-color: #fff;
-}
-th,td{
-    border:1px solid #C1D1DB;
-    padding: 5px 15px;
-}
-.search_box {
-    margin-bottom: 4px;
-}
-.tool_box {
-    padding: 15px;
-    background-color: #ddeafb;
-    background-image:-webkit-linear-gradient(to top, #c9daf0, #fff);
-    background-image:linear-gradient(to top,#c9daf0,#fff)
-}
-.main_box {
-    padding: 10px;
-}
-.stuIfo,.dataList{
-    font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
-    font-size: 12px;
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-.stuIfo{
-    background-color: #f2f6fb;
-    margin: 2px auto;
-    padding: 0.2em 0.5em;
-    height: 30px;
-    line-height: 30px;
-}
-
-.stuIfo th {
-    font-size: 24px;
-    height: 40px;
-    line-height: 40px;
-}
-
-.stuIfo td:hover{
-    background-color: #ede8e8
-}
-
-th,td{
-    border:1px solid #C1D1DB;
-    padding: 5px 15px;
-}
-
-.dataList{
-    margin: 2px auto
-}
-.dataList th {
-    background-color: #ede8e8;
-    background-image:-webkit-linear-gradient(to top, #ede8e8, #fff);
-    background-image:linear-gradient(to top,#ede8e8,#fff)
-}
-
-.dataList th:hover {
-    text-align: left;
-}
-
-.dataList tr {
-    padding: 0.2em 0.5em;
-    height: 30px;
-    line-height: 30px;
-    vertical-align: middle;
-}
-
-.dataList tr:nth-child(odd) {
-    background-color: #f8f7f7
-}
-
-.dataList tr:nth-child(even) {
-    background-color: #fff
-}
-
-.dataList tr:hover {
-    background-color: #ede8e8
-}
-
-.dataList tr td:nth-child(1) {
-    width: 6%;
-}
-
-.dataList tr td:nth-child(2) {
-    width: 3%;
-}
-
-.dataList tr td:nth-child(3) {
-    width: 6%;
-}
-
-.dataList tr td:nth-child(4) {
-    width: 26%;
-}
-
-.dataList tr td:nth-child(5) {
-    width: 9%;
-}
-
-.dataList tr td:nth-child(6) {
-    width: 8%;
-}
-
-.dataList tr td:nth-child(7),
-.dataList tr td:nth-child(8),
-.dataList tr td:nth-child(9){
-    width: 3%;
-}
-
-.dataList tr td:nth-child(10),
-.dataList tr td:nth-child(11),
-.dataList tr td:nth-child(12) {
-    width: 5%;
-}
-
-.dataList tr td:nth-child(13) {
-    width: 9%;
-}
-
-.dataList tr td:nth-child(14) {
-    width: 3%;
-}
-
-.dataList tr td:nth-child(15) {
-    width: 6%;
-}
-.input-style {
-    border: solid 1px #d4d4d4;
-    border-radius: 5px;
-    outline: 0;
-    padding: 5px;
-    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
-}
-.input-style:hover {
-    border: solid 1px #20a0ff;
-}
-.center {
-    display:block;
-    margin:0 auto;
-}
-.switch_button {
-    transform: translate(26px, 2px);
-}
-input[type="checkbox"] {
-    box-sizing: border-box;
+﻿#password{
     display: none;
-    margin: 0;
-    padding: 0;
-    height: 22px;
 }
