--- a/internetProgramming_TeemProject/wwwroot/css/admin.css
+++ b/internetProgramming_TeemProject/wwwroot/css/admin.css
@@ -9,15 +9,14 @@
     display: none;
 }
 body{
-    background-color: whitesmoke;
-    position: absolute;
-    top: 200px;
-    left: 0;
-    right: 10px;
-    bottom: 10px;
-    margin: auto;
-    width: 1500px;
-    height: 1000px;
+    background-color: #f8f8f8f5;
+    font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding-bottom: 100px;
 
 }
 h1{
@@ -31,38 +30,40 @@ h2{
     display:block;
     border-radius: 10px;
     padding: 20px;
+    width: 900px;
+
 }
 .teacher{
     border: #1c4f82 solid 5px;
     display:block;
     border-radius: 10px;
     padding: 20px;
+    width: 900px;
 }
 .student{
     border: #1c4f82 solid 5px;
     display:block;
     border-radius: 10px;
     padding: 20px;
+    width: 900px;
 }
 input{
-    outline-style: none ;
+
     border: 1px solid #ccc;
     border-radius: 3px;
     padding: 8px 10px;
     font-size: 14px;
-    font-weight: 700;
     font-family: "Microsoft soft";
 }
 button,input[type="submit"]{
-    background-color: #4CAF50;
+    background-color: #1c4f82;
     border-radius: 5px;
     color: white;
     padding: 5px 10px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
     font-size: 5px;
 }
 th,td{
-    padding: 5px 15px;
+    padding: 10px 60px;
+
 }
